# query-forwarder

./: DESIGN.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 877b98c6e048_initial_migration_with_domain_user_and_.py  8b80029f58d2_add_apilog_model_for_request_response_.py
query_forwarder/: app.py  crypto.py  database.py  forward.py  models.py
query_forwarder/templates/: base.html  detail.html  index.html
query_forwarder/tests/: __init__.py  test_crypto.py
