[project]
name = "query-forwarder"
version = "0.1.0"
description = "Forwards a SQL query response to a web API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "quart>=0.19.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]
